duihome (0.21.9~1) unstable; urgency=low

  * New version [UNRELEASED]
  * Implemented: SWP#DUI-2724 Support to open launcher at a page where launcher item with certain application icon is displayed.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 18 May 2010 10:00:00 +0300

duihome (0.21.8-1) unstable; urgency=low

  * Disabled the Applet Space 

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 10 May 2010 11:52:48 +0300

duihome (0.21.7-1) unstable; urgency=low

  * Implemented: SWP#DUI-2787 Name of the switcher thumbnail should change when window title is changed.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 07 May 2010 16:55:33 +0300

duihome (0.21.6-2) unstable; urgency=low

  * Fixes: NB#166958 Home screen crashes when changing the desktop wallpaper

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 04 May 2010 14:59:54 +0300

duihome (0.21.5-1) unstable; urgency=low

  * Fixes: NB#160236 Red background and unreadable names and icons in Applet Library
  * Fixes: NB#166169 Taskswitcher background is white and application headers are not visible

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 03 May 2010 15:04:15 +0300

duihome (0.21.4-2) unstable; urgency=low

  * Fixes: NB#165707 Duihome application launch event latency on order of 100 ms
  * Fixes: NB#166167 The launcher and switcher page indicators do not always show the current page

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 30 Apr 2010 11:38:14 +0300

duihome (0.21.3-1) unstable; urgency=low

  * Fixes: NB#165315 - Opening launcher is very slow

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 28 Apr 2010 16:28:57 +0300

duihome (0.21.2-1) unstable; urgency=low
  * Fixes: NB#164107 - After rotating the device thumbnails are arranged in a wrong place
  * Fixes: NB#163814 - In Launcher, SystemSettings Option is missing
  * Fixed switcher button centering
  * Implemented: SWP#DUI-2208 Possibility to change the wallpaper of homescreen.