@@ -5,6 +5,9 @@
 \subsection New
 - Support to open launcher at a page where launcher item with certain application icon is displayed using com.meego.core.HomeScreen dbus service.
 
+\subsection bugs Bugs fixed
+- System modal dialogs appeared in the switcher
+
 \section v0218 0.21.8
 
 \subsection New
