@@ -2,6 +2,7 @@ duihome (0.21.9~1) unstable; urgency=low
 
   * New version [UNRELEASED]
   * Implemented: SWP#DUI-2724 Support to open launcher at a page where launcher item with certain application icon is displayed.
+  * Fixes: NB#168422 - System modal dialog windows are shown in the switcher
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 18 May 2010 10:00:00 +0300
 
